--- a/model_beta/plots/plot_pull.tex
+++ b/model_beta/plots/plot_pull.tex
@@ -10,20 +10,11 @@
 \begin{figure}
 \centering
 \includegraphics[width = 0.4\textwidth]{jpsi_2_CDF_cs.pdf}
-
-\includegraphics[width = 0.4\textwidth]{jpsi_2_CDF_cs_devs.pdf}
-\caption{J/$\psi$ 1.96 TeV CDF results}
-\end{figure}
-
-
-\begin{figure}
-\centering
 \includegraphics[width = 0.4\textwidth]{jpsi_5_ATLAS_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{jpsi_5_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_5_ATLAS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{jpsi_5_CMS_cs_devs.pdf}
-\caption{J/$\psi$ 5.02 TeV ATLAS and CMS results}
+\includegraphics[width = 0.4\textwidth]{jpsi_2_CDF_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_5_ATLAS_cs_pulls.pdf}
+\caption{J/$\psi$ 1.96 TeV CDF (left) and 5.02 TeV ATLAS (right) results}
 \end{figure}
 
 \clearpage
@@ -33,8 +24,8 @@
 \includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs_pulls.pdf}
 \caption{J/$\psi$ 7 TeV CMS and LHCb results}
 \end{figure}
 
@@ -44,7 +35,7 @@
 \centering
 \includegraphics[width = 0.4\textwidth]{jpsi_8_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_8_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_8_LHCb_cs_pulls.pdf}
 \caption{J/$\psi$ 8 TeV LHCb results}
 \end{figure}
 
@@ -55,8 +46,8 @@
 \includegraphics[width = 0.4\textwidth]{jpsi_13_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{jpsi_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_13_CMS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{jpsi_13_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_LHCb_cs_pulls.pdf}
 \caption{J/$\psi$ 13 TeV CMS and LHCb results}
 \end{figure}
 
@@ -67,8 +58,8 @@
 \includegraphics[width = 0.4\textwidth]{chic1_7_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{chic2_7_ATLAS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{chic1_7_ATLAS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{chic2_7_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{chic1_7_ATLAS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{chic2_7_ATLAS_cs_pulls.pdf}
 \caption{$\chi_{c1,2}$ 7 TeV ATLAS results}
 \end{figure}
 
@@ -78,7 +69,7 @@
 \centering
 \includegraphics[width = 0.4\textwidth]{psi2_2_CDF_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_2_CDF_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_2_CDF_cs_pulls.pdf}
 \caption{$\psi$(2S) 1.96 TeV CDF results}
 \end{figure}
 
@@ -87,10 +78,8 @@
 \begin{figure}
 \centering
 \includegraphics[width = 0.4\textwidth]{psi2_5_ATLAS_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{psi2_5_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_5_ATLAS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{psi2_5_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_5_ATLAS_cs_pulls.pdf}
 \caption{$\psi$(2S) 5.02 TeV CMS results}
 \end{figure}
 
@@ -101,8 +90,8 @@
 \includegraphics[width = 0.4\textwidth]{psi2_7_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_7_ATLAS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_7_ATLAS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs_pulls.pdf}
 \caption{$\psi$(2S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
@@ -112,7 +101,7 @@
 \centering
 \includegraphics[width = 0.4\textwidth]{psi2_7_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_7_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_7_LHCb_cs_pulls.pdf}
 \caption{$\psi$(2S) 7 TeV LHCb results}
 \end{figure}
 
@@ -123,8 +112,8 @@
 \includegraphics[width = 0.4\textwidth]{psi2_13_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{psi2_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_13_CMS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{psi2_13_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_13_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_13_LHCb_cs_pulls.pdf}
 \caption{$\psi$(2S) 13 TeV CMS and LHCb results}
 \end{figure}
 
@@ -134,7 +123,7 @@
 \centering
 \includegraphics[width = 0.4\textwidth]{ups1_5_ATLAS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups1_5_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_5_ATLAS_cs_pulls.pdf}
 \caption{$\Upsilon$(1S) 5.02 TeV ATLAS results}
 \end{figure}
 
@@ -145,8 +134,8 @@
 \includegraphics[width = 0.4\textwidth]{ups1_7_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups1_7_ATLAS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_ATLAS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs_pulls.pdf}
 \caption{$\Upsilon$(1S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
@@ -157,8 +146,8 @@
 \includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups1_8_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_8_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_8_LHCb_cs_pulls.pdf}
 \caption{$\Upsilon$(1S) 7 and 8 TeV LHCb results}
 \end{figure}
 
@@ -169,8 +158,8 @@
 \includegraphics[width = 0.4\textwidth]{ups1_13_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups1_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups1_13_CMS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_13_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_13_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_13_LHCb_cs_pulls.pdf}
 \caption{$\Upsilon$(1S) 13 TeV CMS and LHCb results}
 \end{figure}
 
@@ -180,7 +169,7 @@
 \centering
 \includegraphics[width = 0.4\textwidth]{ups2_5_ATLAS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups2_5_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_5_ATLAS_cs_pulls.pdf}
 \caption{$\Upsilon$(2S) 5.02 TeV ATLAS results}
 \end{figure}
 
@@ -191,8 +180,8 @@
 \includegraphics[width = 0.4\textwidth]{ups2_7_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups2_7_ATLAS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_7_ATLAS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs_pulls.pdf}
 \caption{$\Upsilon$(2S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
@@ -203,8 +192,8 @@
 \includegraphics[width = 0.4\textwidth]{ups2_7_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups2_8_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups2_7_LHCb_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups2_8_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_7_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_8_LHCb_cs_pulls.pdf}
 \caption{$\Upsilon$(2S) 7 and 8 TeV LHCb results}
 \end{figure}
 
@@ -215,8 +204,8 @@
 \includegraphics[width = 0.4\textwidth]{ups2_13_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups2_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups2_13_CMS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups2_13_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_13_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_13_LHCb_cs_pulls.pdf}
 \caption{$\Upsilon$(2S) 13 TeV CMS and LHCb results}
 \end{figure}
 
@@ -226,7 +215,7 @@
 \centering
 \includegraphics[width = 0.4\textwidth]{ups3_5_ATLAS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups3_5_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_5_ATLAS_cs_pulls.pdf}
 \caption{$\Upsilon$(3S) 5.02 TeV ATLAS results}
 \end{figure}
 
@@ -237,8 +226,8 @@
 \includegraphics[width = 0.4\textwidth]{ups3_7_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups3_7_ATLAS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_7_ATLAS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs_pulls.pdf}
 \caption{$\Upsilon$(3S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
@@ -249,8 +238,8 @@
 \includegraphics[width = 0.4\textwidth]{ups3_7_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups3_8_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups3_7_LHCb_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups3_8_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_7_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_8_LHCb_cs_pulls.pdf}
 \caption{$\Upsilon$(3S) 7 and 8 TeV LHCb results}
 \end{figure}
 
@@ -261,8 +250,8 @@
 \includegraphics[width = 0.4\textwidth]{ups3_13_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups3_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups3_13_CMS_cs_devs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups3_13_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_13_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_13_LHCb_cs_pulls.pdf}
 \caption{$\Upsilon$(3S) 13 TeV CMS and LHCb results}
 \end{figure}
 
@@ -271,5 +260,9 @@
 \restoregeometry
 
 \input{fitp}
+
+\pagebreak
+
+\input{chisquare}
 
 \end{document}
