--- a/checks_pols/plots/plot_dev.tex
+++ b/checks_pols/plots/plot_dev.tex
@@ -11,7 +11,7 @@
 \centering
 \includegraphics[width = 0.4\textwidth]{jpsi_2_CDF_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_2_CDF_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_2_CDF_cs_devs.pdf}
 \caption{J/$\psi$ 1.96 TeV CDF results}
 \end{figure}
 
@@ -22,8 +22,8 @@
 \includegraphics[width = 0.4\textwidth]{jpsi_5_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{jpsi_5_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_5_ATLAS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{jpsi_5_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_5_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_5_CMS_cs_devs.pdf}
 \caption{J/$\psi$ 5.02 TeV ATLAS (left) and CMS (right) results}
 \end{figure}
 
@@ -34,8 +34,8 @@
 \includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs_devs.pdf}
 \caption{J/$\psi$ 7 TeV CMS and LHCb results}
 \end{figure}
 
@@ -46,8 +46,8 @@
 \includegraphics[width = 0.4\textwidth]{jpsi_8_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{jpsi_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_8_LHCb_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{jpsi_13_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_8_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_LHCb_cs_devs.pdf}
 \caption{J/$\psi$ 8 and 13 TeV LHCb results}
 \end{figure}
 
@@ -57,7 +57,7 @@
 \centering
 \includegraphics[width = 0.4\textwidth]{jpsi_13_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_13_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_CMS_cs_devs.pdf}
 \caption{J/$\psi$ 13 TeV CMS results}
 \end{figure}
 
@@ -67,7 +67,7 @@
 \centering
 \includegraphics[width = 0.4\textwidth]{psi2_2_CDF_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_2_CDF_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_2_CDF_cs_devs.pdf}
 \caption{$\psi$(2S) 1.96 TeV CDF results}
 \end{figure}
 
@@ -77,7 +77,7 @@
 \centering
 \includegraphics[width = 0.4\textwidth]{psi2_5_ATLAS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_5_ATLAS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_5_ATLAS_cs_devs.pdf}
 \caption{$\psi$(2S) 5.02 TeV ATLAS results}
 \end{figure}
 
@@ -88,8 +88,8 @@
 \includegraphics[width = 0.4\textwidth]{psi2_7_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_7_ATLAS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_7_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs_devs.pdf}
 \caption{$\psi$(2S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
@@ -99,7 +99,7 @@
 \centering
 \includegraphics[width = 0.4\textwidth]{psi2_7_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_7_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_7_LHCb_cs_devs.pdf}
 \caption{$\psi$(2S) 7 TeV LHCb results}
 \end{figure}
 
@@ -110,8 +110,8 @@
 \includegraphics[width = 0.4\textwidth]{psi2_13_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{psi2_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_13_CMS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{psi2_13_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_13_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_13_LHCb_cs_devs.pdf}
 \caption{$\psi$(2S) 13 TeV CMS and LHCb results}
 \end{figure}
 
@@ -122,8 +122,8 @@
 \includegraphics[width = 0.4\textwidth]{ups1_7_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups1_7_ATLAS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs_devs.pdf}
 \caption{$\Upsilon$(1S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
@@ -134,8 +134,8 @@
 \includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups1_8_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_8_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_8_LHCb_cs_devs.pdf}
 \caption{$\Upsilon$(1S) 7 and 8 TeV LHCb results}
 \end{figure}
 
@@ -146,8 +146,8 @@
 \includegraphics[width = 0.4\textwidth]{ups1_13_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups1_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups1_13_CMS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_13_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_13_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_13_LHCb_cs_devs.pdf}
 \caption{$\Upsilon$(1S) 13 TeV CMS and LHCb results}
 \end{figure}
 
@@ -159,8 +159,8 @@
 \includegraphics[width = 0.4\textwidth]{ups2_7_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups2_7_ATLAS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_7_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs_devs.pdf}
 \caption{$\Upsilon$(2S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
@@ -171,8 +171,8 @@
 \includegraphics[width = 0.4\textwidth]{ups2_7_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups2_8_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups2_7_LHCb_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups2_8_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_7_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_8_LHCb_cs_devs.pdf}
 \caption{$\Upsilon$(2S) 7 and 8 TeV LHCb results}
 \end{figure}
 
@@ -183,8 +183,8 @@
 \includegraphics[width = 0.4\textwidth]{ups2_13_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups2_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups2_13_CMS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups2_13_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_13_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_13_LHCb_cs_devs.pdf}
 \caption{$\Upsilon$(2S) 13 TeV CMS and LHCb results}
 \end{figure}
 
@@ -195,8 +195,8 @@
 \includegraphics[width = 0.4\textwidth]{ups3_7_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups3_7_ATLAS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_7_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs_devs.pdf}
 \caption{$\Upsilon$(3S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
@@ -207,8 +207,8 @@
 \includegraphics[width = 0.4\textwidth]{ups3_7_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups3_8_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups3_7_LHCb_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups3_8_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_7_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_8_LHCb_cs_devs.pdf}
 \caption{$\Upsilon$(3S) 7 and 8 TeV LHCb results}
 \end{figure}
 
@@ -219,54 +219,11 @@
 \includegraphics[width = 0.4\textwidth]{ups3_13_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups3_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups3_13_CMS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups3_13_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_13_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_13_LHCb_cs_devs.pdf}
 \caption{$\Upsilon$(3S) 13 TeV CMS and LHCb results}
 \end{figure}
 
-\clearpage
-
-\begin{figure}
-\centering
-\includegraphics[width = 0.5\textwidth]{hist_dev.pdf}
-
-\includegraphics[width = 0.5\textwidth]{hist_pulls.pdf}
-\caption{Distribution of fit relative deviations (top) and pulls (bottom).}
-\end{figure}
-
-\clearpage
-
-\begin{figure}
-\centering
-\includegraphics[width = 0.5\textwidth]{hist_dp.pdf}
-\caption{2D distribution of fit relative deviations vs pulls.}
-\end{figure}
-
-\clearpage
-
-\begin{figure}
-\centering
-\includegraphics[width = 0.4\textwidth]{hist_dp_jpsi.pdf}
-\includegraphics[width = 0.4\textwidth]{hist_dp_psi2.pdf}
-
-\includegraphics[width = 0.4\textwidth]{hist_dp_ups1.pdf}
-\includegraphics[width = 0.4\textwidth]{hist_dp_ups2.pdf}
-
-\includegraphics[width = 0.4\textwidth]{hist_dp_ups3.pdf}
-\caption{2D distribution of fit relative deviations vs pulls, divided by state.}
-\end{figure}
-
-\clearpage
-
-\begin{figure}
-\centering
-\includegraphics[width = 0.4\textwidth]{hist_dp_CMS.pdf}
-\includegraphics[width = 0.4\textwidth]{hist_dp_LHCb.pdf}
-
-\includegraphics[width = 0.4\textwidth]{hist_dp_ATLAS.pdf}
-\includegraphics[width = 0.4\textwidth]{hist_dp_CDF.pdf}
-\caption{2D distribution of fit relative deviations vs pulls, divided by experiment.}
-\end{figure}
 
 \clearpage
 \restoregeometry
@@ -276,5 +233,6 @@
 \pagebreak
 
 \input{chisquare}
+
 
 \end{document}
